[package]
name = "urlscan"
version = "0.1.0"
authors = ["Ix76y"]
description = "URLScan.io API"
keywords = ["urlscan", "api"]
categories = ["api-bindings"]
repository = "https://github.com/Ix76y/urlscan-rs"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }
serde_json = "1.0.87"
thiserror = "1.0.37"

[lib]
name = "urlscan"
path = "src/lib.rs"